<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">One DLE</string>
    <string name="title_section_news">Новости</string>
    <string name="title_section_categories">Категории</string>
    <string name="title_section_settings">Настройки</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Добавить</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_authorization">AuthorizationActivity</string>
    <string name="hello_world">Hello world!</string>

    <!-- strings for authorization scree -->
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="site_address">Адрес сайта</string>
    <string name="log_in_button">Войти</string>

    <!-- colors -->

    <color name="orange">#FFA500</color>
    <color name="light_gray">#D3D3D3</color>
    <color name="powder_blue">#B0E0E6</color>
    <color name="ivory3">#CDCDC1</color>
    <color name="ivory4">#8B8B83</color>

    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_user_items">
        <item>Новости</item>
        <item>Статьи</item>
    </string-array>
    <string-array name="nav_drawer_admin_items">
        <item>Новости</item>
        <item>Категории новостей</item>
        <item>Настройки</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_news</item>
        <item>@drawable/ic_articles</item>
        <item>@drawable/ic_settings</item>
    </array>

    <string name="action_logout">Выход</string>
    <string name="action_add_news">Добавить новость</string>
    <string name="action_edit_news">Редактировать новость</string>
    <string name="action_del_news">Удалить новость</string>
    <string name="action_edit_comment">Редактировать</string>
    <string name="action_delete_comment">Удалить</string>
    <string name="action_add_category">Добавить категорию</string>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_full_news">FullNewsActivity</string>
    <string name="title_activity_add_news">AddNewsActivity</string>

    <!-- AddNewsActivity strings -->
        <string name="add_news">Добавить категорию</string>
    <string name="edit_news">Редактировать категорию</string>
    <string name="send">Отправить</string>
    <string name="news_name">Название:</string>
    <string name="news_category">Категория:</string>
    <string name="news_short">Короткая новость:</string>
    <string name="news_full">Полная новость:</string>
    <string name="title_activity_edit_comment">EditCommentActivity</string>
    <string name="title_activity_add_category">AddCategoryActivity</string>

    <!-- AddCategoryActivity strings -->
    <string name="add_category">Добавить категорию</string>
    <string name="edit_category">Редактировать категорию</string>
    <string name="edit">Редактировать</string>
    <string name="parent_category">Надкатегория:</string>
    <string name="alt_name">Альтернативное название:</string>
    
    <!-- EditCOmmentActivity strings -->
    <string name="edit_comment">Редактировать комментарий</string>

    <!-- Settings -->
    <string name="about">О приложении</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="about_info">OneDLE v.1.0 (сборка 1) \n\n
         Разработчик Артем Черевань \n
         itmobiler@gmail.com \n\n
         Copyright © 2015 Admin-Club.ru \n All Rights Reserved. \n\n
         <a href="http://admin-club.ru">http://admin-club.ru</a> \n
         support@admin-club.ru \n
         </string>

</resources>
